[gd_scene load_steps=6 format=3 uid="uid://mw16s7uslxc4"]

[ext_resource type="PackedScene" uid="uid://dmd1rjog6wfas" path="res://1_MainPhases/News/news_screen.tscn" id="1_8kcd2"]
[ext_resource type="Script" uid="uid://dhudgpeh18vda" path="res://1_MainPhases/StartMenu.gd" id="1_vjyj3"]
[ext_resource type="Texture2D" uid="uid://ux3knhilhijd" path="res://textures/Jun 1, 2025, 02_30_13 PM.png" id="2_jocel"]
[ext_resource type="Texture2D" uid="uid://5cob7c5pu0sy" path="res://textures/Jun 1, 2025, 03_12_31 PM.png" id="4_mogej"]

[sub_resource type="Theme" id="Theme_jocel"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vjyj3")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_jocel")

[node name="MainContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="LeftSide" type="VBoxContainer" parent="MainContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="MainContainer/HBoxContainer/LeftSide"]
layout_mode = 2

[node name="NewsTitle" type="RichTextLabel" parent="MainContainer/HBoxContainer/LeftSide/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
tooltip_text = "Vcl"
theme = SubResource("Theme_jocel")
text = "Bảng tin tức / News"
fit_content = true
scroll_active = false
tab_size = 1

[node name="NewsScreen" parent="MainContainer/HBoxContainer/LeftSide" instance=ExtResource("1_8kcd2")]
layout_mode = 2
size_flags_vertical = 3

[node name="NewsScreen2" parent="MainContainer/HBoxContainer/LeftSide" instance=ExtResource("1_8kcd2")]
layout_mode = 2
size_flags_vertical = 3

[node name="RightContainer" type="VBoxContainer" parent="MainContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="PanelContainer" type="PanelContainer" parent="MainContainer/HBoxContainer/RightContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/HBoxContainer/RightContainer/PanelContainer"]
layout_mode = 2

[node name="GameInfo" type="RichTextLabel" parent="MainContainer/HBoxContainer/RightContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Open x11 FREE Daily for 30 Yakisoba Breads"
fit_content = true
scroll_active = false

[node name="GameInfo2" type="RichTextLabel" parent="MainContainer/HBoxContainer/RightContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "New Thesa join the scene! Evils beware ! owo)"
fit_content = true
scroll_active = false

[node name="TopSection" type="VBoxContainer" parent="MainContainer/HBoxContainer/RightContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="NewsScreen" parent="MainContainer/HBoxContainer/RightContainer/TopSection" instance=ExtResource("1_8kcd2")]
layout_mode = 2
size_flags_vertical = 3

[node name="MiddleSection" type="VBoxContainer" parent="MainContainer/HBoxContainer/RightContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.6

[node name="GameInfo" type="RichTextLabel" parent="MainContainer/HBoxContainer/RightContainer/MiddleSection"]
layout_mode = 2
text = "Chào mừng quay trở lại"
fit_content = true
scroll_active = false

[node name="BottomSection" type="VBoxContainer" parent="MainContainer/HBoxContainer/RightContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.2

[node name="ButtonControl" type="Control" parent="MainContainer/HBoxContainer/RightContainer/BottomSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="StartButton" type="Button" parent="MainContainer/HBoxContainer/RightContainer/BottomSection/ButtonControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.0
offset_top = -76.0
offset_right = 56.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
button_mask = 0
text = "Start"
icon = ExtResource("4_mogej")
flat = true
icon_alignment = 1
expand_icon = true
